Rettelser fra noter

--- a/menu.html
+++ b/menu.html
@@ -23,7 +23,7 @@
                 <a href="menu.html" class="active">Menu</a>
                 <a href="opskrifter.html">Opskrifter</a>
                 <a href="index.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo" width="150px"></a>
-                <a href="om_os.html">Om Os</a>
+                <a href="om_os.html">Om os</a>
                 <a href="kontakt.html">Kontakt</a>
             </nav>
         </header>
@@ -41,12 +41,16 @@
                     <div class="menu-item">
                         <div class="menu-item-name">
                             1 stk. fiskefrikadelle eller 1 stk. filet
-                            <br>
-                            4 stk. frit valg
                         </div>
                         <div class="menu-item-price">
                             15,-
-                            <br>
+                        </div>
+                    </div>
+                    <div class="menu-item">
+                        <div class="menu-item-name">
+                            4 stk. frit valg 
+                        </div>
+                        <div class="menu-item-price">
                             50,-
                         </div>
                     </div>
@@ -75,10 +79,10 @@
                             2 fiskefrikadeller el. filet Inkl. brød, smør og remoulade
                         </div>
                         <div class="menu-item-description">
-                            inkl. stor pilsner eller et glas af husets vin
+                            <b>inkl. stor pilsner eller et glas af husets vin</b>
                         </div>
                         <div class="menu-item-price">
-                            75,-
+                            <b>75,-</b>
                         </div>
                     </div>
                 </div>
