--- a/om_os.html
+++ b/om_os.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fonts.css" type="text/css">
 
-    <title>Norsminde Fiskehus - Om Os</title>
+    <title>Norsminde Fiskehus - Om os</title>
     <meta name="description" content="Norsminde Fiskehusets historie, hvem er vi, værdier, mission">
 </head>
 
@@ -23,7 +23,7 @@
                 <a href="menu.html">Menu</a>
                 <a href="opskrifter.html">Opskrifter</a>
                 <a href="index.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo" width="150px"></a>
-                <a href="om_os.html" class="active">Om Os</a>
+                <a href="om_os.html" class="active">Om os</a>
                 <a href="kontakt.html">Kontakt</a>
             </nav>
         </header>
@@ -36,7 +36,7 @@
                 <br>
                 <p>I år 2018 fik Fiskehuset en stor renovering samt en tilbyggelse til Fiskehuset. Der er nu plads til mange flere mennesker både inde og ude.
                 </p>
-                <img src="images/om_os/nf_gamletid.jpg">
+                <img src="images/om_os/nf_gamletid2.jpg">
             </div>
         </section>
 
