--- a/kontakt.html
+++ b/kontakt.html
@@ -23,7 +23,7 @@
                 <a href="menu.html">Menu</a>
                 <a href="opskrifter.html">Opskrifter</a>
                 <a href="index.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo" width="150px"></a>
-                <a href="om_os.html">Om Os</a>
+                <a href="om_os.html">Om os</a>
                 <a href="kontakt.html" class="active">Kontakt</a>
             </nav>
         </header>
