Waterwaves ændringer + noter 2. udgave

--- a/index.html
+++ b/index.html
@@ -36,16 +36,18 @@
         <section class="grid-content">
             <div class="content">
                 <h2>Ugens fisk!</h2>
-                <img src="images/ugens_fisk_grafik.png" alt="Billed af en tegnet fisk">
             </div>
-            <p class="ugens-fisk_content">Ugens fisk er en sprød fiskeburger med hjemmelavet remoulade.
+            <div class="ugensfisk_row">
+                <img src="images/ugens_fisk_grafik.png" alt="Billed af en tegnet fisk" class="ugensfisk_column">
+                <p class="ugens-fisk_content ugensfisk_column">Ugens fisk er en sprød fiskeburger med hjemmelavet remoulade.
                     <br><br>Pris i DKK: Fiskebruger: <b>80,-</b>
                     <br>Fiskeburger inkl. chips: <b>95,-</b>
-                    <br><br>Ring og bestil på <b>25 55 52 03</b>, eller kom ned og nyd din burger på havnen med en kold fadøl.
+                    <br><br> <b>Ring og bestil</b> på 25 55 52 03, eller kom ned og nyd din burger på havnen med en kold fadøl.
                 </p>
+            </div>
         </section>
 
-       
+
         <!-- Aside - Åbningstider -->
         <aside class="grid-aside">
             <div class="asidecontent">
@@ -83,19 +85,11 @@
         <!-- Footer -->
         <footer class="grid-footer">
             <div class="kontakt_ikon">
-                <h3>Kontakt</h3>
                 <ul>
                     <li><a href="tel:25555203"><img src="images/kontakt_ikoner/icon_telefon.png">+45 25 55 52 03</a></li>
                     <li><a href="mailto:kontakt@norsmindefiskehus.dk"><img src="images/kontakt_ikoner/icon_mail.png">kontakt@norsmindefiskehus.dk</a></li>
                     <li><a href="https://www.google.dk/maps/place/Norsminde+Fiskehus/@56.0226543,10.2610306,17z/data=!3m1!4b1!4m5!3m4!1s0x464c4412ad4caf79:0x2fa4c9054211bc3c!8m2!3d56.0226543!4d10.2624646"><img src="images/kontakt_ikoner/icon_adresse.png">Gl. Krovej 104, 8300 Odder</a></li>
                 </ul>
-            </div>
-
-            <div class="payment">
-                <div class="payment_align"><img src="images/betalingsmetoder/dankort_logo.png" alt="Dankort Logo">
-                </div>
-                <div class="payment_align"><img src="images/betalingsmetoder/mobilepay_logo.png" alt="MobilePay Logo">
-                </div>
             </div>
         </footer>
     </div>
