--- a/opskrifter.html
+++ b/opskrifter.html
@@ -32,7 +32,7 @@
 <!-- Content - Opskrifter -->
         <section class="grid-content">
         </section>
-        <div class="opskrift">
+        <div class="opskrift opskrift_height">
             <div class="opskrift_pos1">
                 <a href="images/opskrifter/lettunsalat.jpg" data-lightbox="lettunsalat.jpg" data-title="
                 
@@ -78,26 +78,17 @@ Smager godt på rugbrød eller flutes.">
             </div>
         </div>
 
-
 <!-- Footer -->
-        <footer class="grid-footer">
+        <footer class="grid-footer waterwave">
             <div class="kontakt_ikon">
-                <h3>Kontakt</h3>
                 <ul>
                     <li><a href="tel:25555203"><img src="images/kontakt_ikoner/icon_telefon.png">+45 25 55 52 03</a></li>
                     <li><a href="mailto:kontakt@norsmindefiskehus.dk"><img src="images/kontakt_ikoner/icon_mail.png">kontakt@norsmindefiskehus.dk</a></li>
                     <li><a href="https://www.google.dk/maps/place/Norsminde+Fiskehus/@56.0226543,10.2610306,17z/data=!3m1!4b1!4m5!3m4!1s0x464c4412ad4caf79:0x2fa4c9054211bc3c!8m2!3d56.0226543!4d10.2624646"><img src="images/kontakt_ikoner/icon_adresse.png">Gl. Krovej 104, 8300 Odder</a></li>
                 </ul>
             </div>
-
-            <div class="payment">
-                <div class="payment_align"><img src="images/betalingsmetoder/dankort_logo.png" alt="Dankort Logo">
-                </div>
-                <div class="payment_align"><img src="images/betalingsmetoder/mobilepay_logo.png" alt="MobilePay Logo">
-                </div>
-            </div>
         </footer>
-<div class="waterwave"></div>
+
     </div>
 
     <script src="js/lightbox-plus-jquery.js"></script>
