--- a/kontakt.html
+++ b/kontakt.html
@@ -30,8 +30,17 @@
 
         <!-- Content - Kontaktinformation + Kontaktformular -->
         <section class=grid-content>
-            <div class="kontakt">
-                <div class="kontaktform">
+            <div class="kontakt findos_flexrow">
+               <div class="findos findos_flexcolumn">
+                    <h2>Her finder du os</h2>
+                    <p>Norsminde Fiskehus <br><br> 
+                    Gl. Krovej 1A <br>8300 Odder </p>
+                    <br>
+                    <p>Telefon: 2555 5203</p>
+                    <br>
+                    <p>Mail: Norsmindefiskehus@gmail.com</p>
+                </div>
+                <div class="kontaktform findos_flexcolumn">
                    <h3>Du kan kontakte os her uden for sæsonen</h3>
                     <form action="action_page.php">
 
@@ -51,14 +60,6 @@
 
                     </form>
                 </div>
-                <div class="findos">
-                    <h2>Her finder du os</h2>
-                    <p>Norsminde Fiskehus Gl. Krovej 1A <br>8300 Odder </p>
-                    <br>
-                    <p>Tlf: 2555 5203</p>
-                    <br>
-                    <p>Mail: Norsmindefiskehus@gmail.com</p>
-                </div>
             </div>
         </section>
         
@@ -72,20 +73,11 @@
         <!-- Footer -->
         <footer class="grid-footer">
             <div class="kontakt_ikon">
-                <h3>Kontakt</h3>
                 <ul>
                     <li><a href="tel:25555203"><img src="images/kontakt_ikoner/icon_telefon.png">+45 25 55 52 03</a></li>
                     <li><a href="mailto:kontakt@norsmindefiskehus.dk"><img src="images/kontakt_ikoner/icon_mail.png">kontakt@norsmindefiskehus.dk</a></li>
                     <li><a href="https://www.google.dk/maps/place/Norsminde+Fiskehus/@56.0226543,10.2610306,17z/data=!3m1!4b1!4m5!3m4!1s0x464c4412ad4caf79:0x2fa4c9054211bc3c!8m2!3d56.0226543!4d10.2624646"><img src="images/kontakt_ikoner/icon_adresse.png">Gl. Krovej 104, 8300 Odder</a></li>
                 </ul>
-            </div>
-
-
-            <div class="payment">
-                <div class="payment_align"><img src="images/betalingsmetoder/dankort_logo.png" alt="Dankort Logo">
-                </div>
-                <div class="payment_align"><img src="images/betalingsmetoder/mobilepay_logo.png" alt="MobilePay Logo">
-                </div>
             </div>
         </footer>
     </div>
