Forside - Finpudsning - 2. noter
Pil ned af på forside  ✓
Bølgen skal redigeres  ✓

Mad billederne skal pop frem -> Hover effekt ✓
Ikoner skal have mere luft ✓
Kontakt ordet skal slettes ✓
Den røde fisk tekst skal have samme typografi som de to andre ✓ (den var allerede)
DKK og Mobilepay skal fjernes ✓
Facebook ikonet skal med på siden i footeren -> Hvidt logo ✓
“RIng og bestil” skal være bold og ikke telefonnummeret være bold ✓
Streg under Ugens fisk ligesom på åbningstider ✓

--- a/index.html
+++ b/index.html
@@ -27,9 +27,14 @@
                 <a href="kontakt.html">Kontakt</a>
             </nav>
         </header>
+        <div class="arrow_height">
+            <div class="forsidebillede">
+                <img src="images/norsminde_fiskehus_forside.jpg">
+            </div>
 
-        <div class="forsidebillede">
-            <img src="images/norsminde_fiskehus_forside.jpg">
+            <div class="arrow bounce">
+                <i class="arrow down"></i>
+            </div>
         </div>
 
         <!-- Content - Ugens Fisk -->
@@ -46,7 +51,6 @@
                 </p>
             </div>
         </section>
-
 
         <!-- Aside - Åbningstider -->
         <aside class="grid-aside">
@@ -77,18 +81,35 @@
 
         <!-- Madgalleri -->
         <div class="grid-gallery">
-            <img src="images/madgalleri/madgalleri1.jpg" alt="Billede af en madplatte fra Norsminde Fiskehus">
-            <img src="images/madgalleri/madgalleri2.jpg" alt="Billede af fiskefrikadeller">
-            <img src="images/madgalleri/madgalleri3.jpg" alt="Billede af fiskefilet">
+            <div class="container">
+                <img src="images/madgalleri/madgalleri1.jpg" alt="Billede af en madplatte fra Norsminde Fiskehus">
+                <div class="overlay">
+                    <div class="text">Madplatte til 2</div>
+                </div>
+            </div>
+            <div class="container">
+                <img src="images/madgalleri/madgalleri2.jpg" alt="Billede af en madplatte fra Norsminde Fiskehus">
+                <div class="overlay">
+                    <div class="text">Fiskefrikadeller</div>
+                </div>
+            </div>
+            <div class="container">
+                <img src="images/madgalleri/madgalleri3.jpg" alt="Billede af en madplatte fra Norsminde Fiskehus">
+                <div class="overlay">
+                    <div class="text">Fiskefilet</div>
+                </div>
+            </div>
         </div>
 
         <!-- Footer -->
         <footer class="grid-footer">
             <div class="kontakt_ikon">
                 <ul>
-                    <li><a href="tel:25555203"><img src="images/kontakt_ikoner/icon_telefon.png">+45 25 55 52 03</a></li>
-                    <li><a href="mailto:kontakt@norsmindefiskehus.dk"><img src="images/kontakt_ikoner/icon_mail.png">kontakt@norsmindefiskehus.dk</a></li>
-                    <li><a href="https://www.google.dk/maps/place/Norsminde+Fiskehus/@56.0226543,10.2610306,17z/data=!3m1!4b1!4m5!3m4!1s0x464c4412ad4caf79:0x2fa4c9054211bc3c!8m2!3d56.0226543!4d10.2624646"><img src="images/kontakt_ikoner/icon_adresse.png">Gl. Krovej 104, 8300 Odder</a></li>
+                    <li><a href="tel:25555203"><img src="images/kontakt_ikoner/icon_telefon.png" alt="Telefon ikon">+45 25 55 52 03</a></li>
+                    <li><a href="mailto:kontakt@norsmindefiskehus.dk"><img src="images/kontakt_ikoner/icon_mail.png" alt="Email ikon">kontakt@norsmindefiskehus.dk</a></li>
+                    <li><a href="https://www.google.dk/maps/place/Norsminde+Fiskehus/@56.0226543,10.2610306,17z/data=!3m1!4b1!4m5!3m4!1s0x464c4412ad4caf79:0x2fa4c9054211bc3c!8m2!3d56.0226543!4d10.2624646"><img src="images/kontakt_ikoner/icon_adresse.png" alt="Adresse ikon">Gl. Krovej 104, 8300 Odder</a></li>
+                    <li><a href="https://www.facebook.com/FiskehusetNorsminde">
+            <img src="images/kontakt_ikoner/icon_facebook.png" alt="Facebook Ikon" class="facebook"></a></li>
                 </ul>
             </div>
         </footer>
