--- a/kontakt.html
+++ b/kontakt.html
@@ -74,9 +74,11 @@
         <footer class="grid-footer">
             <div class="kontakt_ikon">
                 <ul>
-                    <li><a href="tel:25555203"><img src="images/kontakt_ikoner/icon_telefon.png">+45 25 55 52 03</a></li>
-                    <li><a href="mailto:kontakt@norsmindefiskehus.dk"><img src="images/kontakt_ikoner/icon_mail.png">kontakt@norsmindefiskehus.dk</a></li>
-                    <li><a href="https://www.google.dk/maps/place/Norsminde+Fiskehus/@56.0226543,10.2610306,17z/data=!3m1!4b1!4m5!3m4!1s0x464c4412ad4caf79:0x2fa4c9054211bc3c!8m2!3d56.0226543!4d10.2624646"><img src="images/kontakt_ikoner/icon_adresse.png">Gl. Krovej 104, 8300 Odder</a></li>
+                    <li><a href="tel:25555203"><img src="images/kontakt_ikoner/icon_telefon.png" alt="Telefon ikon">+45 25 55 52 03</a></li>
+                    <li><a href="mailto:kontakt@norsmindefiskehus.dk"><img src="images/kontakt_ikoner/icon_mail.png" alt="Email ikon">kontakt@norsmindefiskehus.dk</a></li>
+                    <li><a href="https://www.google.dk/maps/place/Norsminde+Fiskehus/@56.0226543,10.2610306,17z/data=!3m1!4b1!4m5!3m4!1s0x464c4412ad4caf79:0x2fa4c9054211bc3c!8m2!3d56.0226543!4d10.2624646"><img src="images/kontakt_ikoner/icon_adresse.png" alt="Adresse ikon">Gl. Krovej 104, 8300 Odder</a></li>
+                    <li><a href="https://www.facebook.com/FiskehusetNorsminde">
+            <img src="images/kontakt_ikoner/icon_facebook.png" alt="Facebook Ikon" class="facebook"></a></li>
                 </ul>
             </div>
         </footer>
