Om os - Finpudsning - 2. noter
Starten på den farvede baggrund skal starte samme sted som den lyseblå på kontakt os ✓
Billedet skal være større -> Ryk billedet op så den blå kasse ikke er så stor ✓
Rammen tager opmærksomheden -> Tilføj skygge på billedet ✓
Billedet + historie afsnittet skal have samme margin på begge sider = Det vil sige at teksten og billedet skal have samme afstand ud til kanten ✓
Hvem er vi -> Ryk længere op ✓
Profil tekst skal have lige margen -> Samme bredde af brødteksten ✓
Vores værdier og mission skal have sammen størrelse som de andre overskrifter ✓
Heidi fisk skal ind på siden ✓
Teksten skal være størrer og der skal helst ikke være så meget luft mellem teksten og footeren ✓

--- a/om_os.html
+++ b/om_os.html
@@ -32,11 +32,15 @@
         <section class="grid-content">
             <div class="historie">
                 <h1>Historie</h1>
-                <p>Norsminde Fiskehus har eksisteret over 60 år, med mange forskellige forpagtere. Fiskehuset er havnens perle, og er et populært spisested blandt de lokale. Der har altid været fokus på at servere frisk fisk og på de berømte fiskefrikadeller. </p>
-                <br>
-                <p>I år 2018 fik Fiskehuset en stor renovering samt en tilbyggelse til Fiskehuset. Der er nu plads til mange flere mennesker både inde og ude.
-                </p>
-                <img src="images/om_os/nf_gamletid2.jpg">
+                <div class="historie_row">
+                    <div class="historie_column">
+                        <p>Norsminde Fiskehus har eksisteret over 60 år, med mange forskellige forpagtere. Fiskehuset er havnens perle, og er et populært spisested blandt de lokale. Der har altid været fokus på at servere frisk fisk og på de berømte fiskefrikadeller.<br><br>
+                    I år 2018 fik Fiskehuset en stor renovering samt en tilbyggelse til Fiskehuset. Der er nu plads til mange flere mennesker både inde og ude.</p>
+                    </div>
+                    <div class="historie_column">
+                        <img src="images/om_os/nf_gamletid.jpg">
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -77,7 +81,8 @@
                 </div>
             </div>
         </aside>
-
+        <img src="images/pynte_fisk.png" alt="Pynte fisk" class="pyntefisk_pos3">
+        <img src="images/pynte_fisk.png" alt="Pynte fisk" class="pyntefisk_pos4">
 
         <!-- Footer -->
         <footer class="grid-footer waterwave">
