Ny grafik fisk billede

--- a/om_os.html
+++ b/om_os.html
@@ -34,8 +34,7 @@
                 <h1>Historie</h1>
                 <div class="historie_row">
                     <div class="historie_column">
-                        <p>Norsminde Fiskehus har eksisteret over 60 år, med mange forskellige forpagtere. Fiskehuset er havnens perle, og er et populært spisested blandt de lokale. Der har altid været fokus på at servere frisk fisk og på de berømte fiskefrikadeller.<br><br>
-                    I år 2018 fik Fiskehuset en stor renovering samt en tilbyggelse til Fiskehuset. Der er nu plads til mange flere mennesker både inde og ude.</p>
+                        <p>Norsminde Fiskehus har eksisteret over 60 år, med mange forskellige forpagtere. Fiskehuset er havnens perle, og er et populært spisested blandt de lokale. Der har altid været fokus på at servere frisk fisk og på de berømte fiskefrikadeller.<br><br> I år 2018 fik Fiskehuset en stor renovering samt en tilbyggelse til Fiskehuset. Der er nu plads til mange flere mennesker både inde og ude.</p>
                     </div>
                     <div class="historie_column">
                         <img src="images/om_os/nf_gamletid.jpg">
@@ -79,11 +78,11 @@
 
                     <span>- Signe Graham</span>
                     <img src="images/pynte_fisk.png" alt="Pynte fisk" class="pyntefisk_pos3">
-        <img src="images/pynte_fisk.png" alt="Pynte fisk" class="pyntefisk_pos4">
+                    <img src="images/pynte_fisk.png" alt="Pynte fisk" class="pyntefisk_pos4">
                 </div>
             </div>
         </aside>
-        
+
 
         <!-- Footer -->
         <footer class="grid-footer waterwave">
