--- a/kontakt.html
+++ b/kontakt.html
@@ -38,8 +38,8 @@
                     <p>Telefon: 2555 5203</p>
                     <br>
                     <p>Mail: Norsmindefiskehus@gmail.com</p>
-                    <img src="images/pynte_fisk.png" alt="Pynte fisk" class="pyntefisk_pos5">
-                    <img src="images/pynte_fisk.png" alt="Pynte fisk" class="pyntefisk_pos6">
+                    <img src="images/fisk_pynt.png" alt="Pynte fisk" class="pyntefisk_pos5">
+                    <img src="images/fisk_pynt.png" alt="Pynte fisk" class="pyntefisk_pos6">
                 </div>
                 <div class="kontaktform findos_flexcolumn">
                     <h3>Du kan kontakte os her uden for sæsonen</h3>
@@ -60,9 +60,7 @@
                         <input type="submit" value="Send">
 
                     </form>
-
                 </div>
-
             </div>
         </section>
 
