--- a/menu.html
+++ b/menu.html
@@ -349,8 +349,8 @@
                         <li>16,-</li>
                     </ul>
                 </div>
-                <img src="images/pynte_fisk.png" alt="Pynte fisk" class="pyntefisk_pos1">
-                <img src="images/pynte_fisk.png" alt="Pynte fisk" class="pyntefisk_pos2">
+                <img src="images/fisk_pynt.png" alt="Pynte fisk" class="pyntefisk_pos1">
+                <img src="images/fisk_pynt.png" alt="Pynte fisk" class="pyntefisk_pos2">
             </div>
 
 
