Beautify + alt på alle billeder

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </header>
         <div class="arrow_height">
             <div class="forsidebillede">
-                <img src="images/norsminde_fiskehus_forside.jpg">
+                <img src="images/norsminde_fiskehus_forside.jpg" alt="Billede af forsiden, Norsminde Fiskehus">
             </div>
 
             <div class="arrow bounce">
