--- a/om_os.html
+++ b/om_os.html
@@ -37,7 +37,7 @@
                         <p>Norsminde Fiskehus har eksisteret over 60 år, med mange forskellige forpagtere. Fiskehuset er havnens perle, og er et populært spisested blandt de lokale. Der har altid været fokus på at servere frisk fisk og på de berømte fiskefrikadeller.<br><br> I år 2018 fik Fiskehuset en stor renovering samt en tilbyggelse til Fiskehuset. Der er nu plads til mange flere mennesker både inde og ude.</p>
                     </div>
                     <div class="historie_column">
-                        <img src="images/om_os/nf_gamletid.jpg">
+                        <img src="images/om_os/nf_gamletid.jpg" alt="Et billede af Norsminde Fiskehus i gamle dage">
                     </div>
                 </div>
             </div>
@@ -50,10 +50,10 @@
 
                 <div class="hvemervirow">
                     <div class="hvemervicolumn">
-                        <img src="images/om_os/redningsring_kvinde.png">
+                        <img src="images/om_os/redningsring_kvinde.png" alt="Profilbillede af Signe Graham">
                     </div>
                     <div class="hvemervicolumn">
-                        <img src="images/om_os/redningsring_mand.png">
+                        <img src="images/om_os/redningsring_mand.png" alt="Profilbillede af Rhodi Graham">
                     </div>
                 </div>
 
