Korrekte billeder til opskrifterne

--- a/om_os.html
+++ b/om_os.html
@@ -22,7 +22,7 @@
             <nav class="grid-nav">
                 <a href="menu.html">Menu</a>
                 <a href="opskrifter.html">Opskrifter</a>
-                <a href="index.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo" width="150px"></a>
+                <a href="index.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo"></a>
                 <a href="om_os.html" class="active">Om os</a>
                 <a href="kontakt.html">Kontakt</a>
             </nav>
