lang=dk // lang=da + kommentar struktur

--- a/menu.html
+++ b/menu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="dk">
+<html lang="da">
 
 <head>
     <meta charset="UTF-8">
@@ -28,7 +28,7 @@
             </nav>
         </header>
 
-        <!-- Content - Historie -->
+        <!-- Content - Menukort 1 -->
         <section class="grid-content chalkboard">
             <h2 class="menu-section-title">MENUKORT</h2>
 
@@ -88,8 +88,7 @@
                 </div>
             </div>
 
-            <!-- -->
-
+            <!-- Content - Menukort 2 -->
             <div class="menufloat">
                 <div class="menu-item">
                     <div class="menu-item-name">
@@ -159,6 +158,7 @@
                 </div>
             </div>
 
+           <!-- Content - Drikkevarer 1 -->
             <div class="drikkevarer">
                 <h2 class="menu-section-title">DRIKKEVARER</h2>
                 <div class="menu-body">
@@ -262,7 +262,8 @@
                         </div>
                     </div>
                 </div>
-
+                
+                <!-- Content - Drikkevarer 2 -->
                 <div class="menufloat2">
                     <div class="menu-section">
                         <div class="menu-item">
@@ -318,7 +319,7 @@
             </div>
         </section>
 
-        <!-- Aside - Hvem er vi? -->
+        <!-- Aside - Salg af fisk -->
         <aside class="grid-aside">
             <div class="salg_af_fisk">
                 <h3>Salg af fisk</h3>
@@ -352,7 +353,6 @@
                 <img src="images/fisk_pynt.png" alt="Pynte fisk" class="pyntefisk_pos1">
                 <img src="images/fisk_pynt.png" alt="Pynte fisk" class="pyntefisk_pos2">
             </div>
-
 
         </aside>
         <!-- Footer -->
