--- a/kontakt.html
+++ b/kontakt.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="dk">
+<html lang="da">
 
 <head>
     <meta charset="UTF-8">
@@ -61,8 +61,8 @@
 
                     </form>
                 </div>
+                
             </div>
-
             <div id="map"></div>
         </section>
 
@@ -86,6 +86,8 @@
             </section>
         </footer>
     </div>
+    
+    <!-- Script - Google Maps -->
     <script>
         function initMap() {
             var mapOptions = {
