HTML Warnings fix

--- a/kontakt.html
+++ b/kontakt.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
     <meta name="author" content="Heidi Callesen, Johan Nybro Nielsen, Milla Arushnee Nielsen, Patrick Koo Madsen">
 
@@ -74,7 +74,7 @@
 
         <!-- Footer -->
         <footer class="grid-footer">
-            <section class="container_footer">
+            <div class="container_footer">
                 <div class="left-half">
                     <a href="tel:25555203"><img src="images/kontakt_ikoner/icon_telefon.png" alt="Telefon ikon">+45 25 55 52 03</a>
                     <a href="mailto:kontakt@norsmindefiskehus.dk"><img src="images/kontakt_ikoner/icon_mail.png" alt="Email ikon">kontakt@norsmindefiskehus.dk</a>
@@ -83,7 +83,7 @@
                     <a href="https://www.facebook.com/FiskehusetNorsminde">
             <img src="images/kontakt_ikoner/icon_facebook.png" alt="Facebook Ikon"></a>
                 </div>
-            </section>
+            </div>
         </footer>
     </div>
     
