HTML fixes pt. 2

--- a/kontakt.html
+++ b/kontakt.html
@@ -52,7 +52,7 @@
                         <input type="text" id="lname" name="lastname">
 
                         <label for="lname">Telefon</label>
-                        <input type="text" id="lname" name="lastname">
+                        <input type="text" id="phone" name="phone">
 
                         <label for="subject">Emne</label>
                         <textarea id="subject" name="subject" style="height:200px"></textarea>
