--- a/opskrifter.html
+++ b/opskrifter.html
@@ -30,8 +30,8 @@
         </header>
 
         <!-- Content - Opskrifter -->
-        <section class="grid-content">
-        </section>
+        <div class="grid-content">
+        </div>
         <div class="opskrift">
             <h2 class="opskrift_overskrift">Opskrifter</h2>
             
